Bug#38342 -backup_myisam1 test fails on Windows The problem is that  this test, uses file locking and myisam unlocks the same file region twice. Unix my_lock implementation based on fcntl() does not return error in this case, but Windows UnlockFile() returns ERROR_NOT_LOCKED.

Fixed by ignoring ERROR_NOT_LOCKED from UnlockFile(). This fix does 
not make myisam  better, but at least the implementation of my_lock() 
compatible to *nix.